tests/baselines/reference/arrowFunctionInExpressionStatement2.errors.txt
arrowFunctionInExpressionStatement2.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== arrowFunctionInExpressionStatement2.ts (1 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        () => 0;
    }